--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,17 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,200;6..12,300;6..12,400;6..12,500;6..12,600;6..12,700;6..12,800;6..12,900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  #header {
+    @apply w-full h-20 px-4 py-15 flex flex-row flex-nowrap justify-between items-center drop-shadow-base
+    md:px-20 md:py-6
+    bg-white text-night
+    dark:bg-gunmetalLight dark:text-white;
+  }
+}
 
 input:focus,
 button:focus,
